# tskr

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.cursor/rules/: tskr.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: release.yml  test.yml
.tskr/: README.md  project.json
.tskr/tasks/backlog/: ae5a97d1-cebc-4d32-b2a8-a88a2613a1a9.json
docs/: README.md
docs/user-guide/: getting-started.md
src/tskr/: __init__.py  __main__.py  cli.py  config.py  context.py  formatters.py  models.py  repository.py  services.py  storage.py  utils.py
src/tskr/commands/: __init__.py  add.py  delete.py  edit.py  init.py  ls.py
src/tskr/models/: __init__.py  event.py  project.py  task.py
src/tskr/services/: __init__.py  project_service.py  task_service.py
tests/: __init__.py  conftest.py  test_cli.py  test_commands.py  test_config.py  test_context.py  test_formatters.py  test_models.py  test_services.py  test_storage.py  test_utils.py
